# rule-engine-python

./: Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  test.py
.github/workflows/: pypi-publish.yml  python-publish.yml
examples/: example.ipynb  example1.ipynb  raw.ipynb  wrapped.ipynb
src/dotnet_nlp/rule_engine/: __init__.py
src/dotnet_nlp/rule_engine/bundle/: __init__.py  converter.py  helper.py  helpers.py  initializer.py  wrappers.py
