[project]
name = "dotnet_nlp.rule_engine"
readme = "README.md"
license = {file="LICENSE"}
dynamic = ["version"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
    [tool.setuptools.packages.find]
    where = ["src"]

    [tool.setuptools.package-data]
    "*" = ["runtimeconfig.json", "dlls/*"]