[project]
name = "dotnet_nlp.rule_engine"
readme = "README.md"
license = {file="LICENSE"}
dynamic = ["version"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
    [tool.setuptools.packages.find]
    where = ["src"]

    [tool.setuptools.package-data]
    "*" = ["runtimeconfig.json", "dlls/*"]

    [tool.setuptools.dynamic]
    version = {attr="dotnet_nlp.rule_engine.__version__"}